SPLITEMAPP-39 Implementing image cropping library obtained from https://github.com/ArthurHub/Android-Image-Cropper Using circle cropping setting for user avatars and rectangle cropping for projects

--- a/SplitemApp/app/src/main/AndroidManifest.xml
+++ b/SplitemApp/app/src/main/AndroidManifest.xml
@@ -50,6 +50,11 @@
         </service>
         <!-- Android GCM END -->
 
+        <!-- Android Image Cropping -->
+        <activity android:name="com.theartofdev.edmodo.cropper.CropImageActivity"
+            android:theme="@style/Base.Theme.AppCompat"/>
+
+        <!-- SplitemApp Activities -->
         <activity
             android:name="com.splitemapp.android.screen.welcome.WelcomeActivity"
             android:screenOrientation="portrait"
