--- a/SplitemApp/app/build.gradle
+++ b/SplitemApp/app/build.gradle
@@ -34,6 +34,9 @@ dependencies {
     compile 'com.android.support:cardview-v7:23.4.0'
     compile 'com.android.support:design:23.4.0'
     compile 'com.google.android.gms:play-services-gcm:9.0.2'
+    compile ('com.theartofdev.edmodo:android-image-cropper:2.3.0') {
+        exclude module: 'appcompat-v7'
+    }
     compile 'com.daimajia.swipe:android-swipelayout:1.0.0'
     compile 'com.j256.ormlite:ormlite-core:5.0'
     compile 'com.j256.ormlite:ormlite-android:5.0'
