SPLITEMAPP-88 - Adding facebook dependency - Adding new layout to the login fragment to show login options - Adding logic to the new buttons to handle choosing one of two login methods - Adding Facebook metadata

--- a/SplitemApp/app/build.gradle
+++ b/SplitemApp/app/build.gradle
@@ -57,6 +57,6 @@ dependencies {
     compile 'javax.persistence:persistence-api:1.0.2'
     compile 'org.springframework.android:spring-android-rest-template:1.0.1.RELEASE'
     compile 'com.fasterxml.jackson.core:jackson-databind:2.4.3'
-
+    compile 'com.facebook.android:facebook-android-sdk:4.5.0'
 }
 
