--- a/SplitemApp/app/src/main/AndroidManifest.xml
+++ b/SplitemApp/app/src/main/AndroidManifest.xml
@@ -112,6 +112,10 @@
             android:windowSoftInputMode="stateHidden"
             android:theme="@style/NoActionBarTheme" >
         </activity>
+        <activity
+            android:name="com.facebook.FacebookActivity"
+            android:screenOrientation="portrait" >
+        </activity>
     </application>
 
 </manifest>
