- Fixing the maven local repository reference so it runs independently of the dev environment- Fixing the maven local repository reference so it runs independently of the dev environment

--- a/SplitemApp/build.gradle
+++ b/SplitemApp/build.gradle
@@ -14,7 +14,7 @@ buildscript {
 
 allprojects {
     repositories {
-        maven { url "file://Users/nicolas/.m2/repository" }
+        mavenLocal()
         mavenCentral()
         jcenter()
     }
