--- a/SplitemApp/app/build.gradle
+++ b/SplitemApp/app/build.gradle
@@ -1,13 +1,13 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 23
-    buildToolsVersion "23.0.3"
+    compileSdkVersion 25
+    buildToolsVersion "25.0.2"
 
     defaultConfig {
         applicationId "com.splitemapp.android"
         minSdkVersion 10
-        targetSdkVersion 23
+        targetSdkVersion 25
         versionCode 31
         versionName "1.0.0"
     }
@@ -30,14 +30,14 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:23.4.0'
-    compile 'com.android.support:cardview-v7:23.4.0'
-    compile 'com.android.support:design:23.4.0'
-    compile 'com.google.android.gms:play-services-gcm:9.0.2'
+    compile 'com.android.support:appcompat-v7:25.1.1'
+    compile 'com.android.support:cardview-v7:25.1.1'
+    compile 'com.android.support:design:25.1.1'
+    compile 'com.google.android.gms:play-services-gcm:10.0.1'
     compile ('com.theartofdev.edmodo:android-image-cropper:2.3.0') {
         exclude module: 'appcompat-v7'
     }
-    compile 'com.daimajia.swipe:android-swipelayout:1.0.0'
+    compile 'com.daimajia.swipelayout:library:1.2.0'
     compile 'com.j256.ormlite:ormlite-core:5.0'
     compile 'com.j256.ormlite:ormlite-android:5.0'
     compile ('com.splitemapp:splitemapp-commons:1.0.0-SNAPSHOT') {
