--- a/SplitemApp/app/build.gradle
+++ b/SplitemApp/app/build.gradle
@@ -6,7 +6,7 @@ android {
 
     defaultConfig {
         applicationId "com.splitemapp.android"
-        minSdkVersion 10
+        minSdkVersion 14
         targetSdkVersion 25
         versionCode 31
         versionName "1.0.0"
@@ -33,6 +33,7 @@ dependencies {
     compile 'com.android.support:appcompat-v7:25.1.1'
     compile 'com.android.support:cardview-v7:25.1.1'
     compile 'com.android.support:design:25.1.1'
+    compile 'com.github.clans:fab:1.6.4'
     compile 'com.google.android.gms:play-services-gcm:10.0.1'
     compile ('com.theartofdev.edmodo:android-image-cropper:2.3.0') {
         exclude module: 'appcompat-v7'
